# modernrcm

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  VISION.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/activities/: events.py  runner.py
backend/agents/: playwright_executor.py  replay.py
backend/app/: db.py  main.py  models.py  settings.py
backend/app/events/: bus.py  envelope.py
backend/app/routes/: events.py  health.py  runs.py  schemas.py  test_portal.py
backend/app/schemas/: base.py  claim_status.py  eligibility.py
backend/app/utils/: idempotency.py
backend/dsl/: spec.yaml  validator.py
backend/workers/: runner.py
backend/workflows/: client.py  portal.py
docker/: entrypoint_api.sh  entrypoint_worker.sh
docs/: MVP_TODO.md
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_init.py
